Section hero was added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,24 @@
     </nav>
   </header>
   <!-- Main -->
-  
+  <main class="main">
+    <section class="hero">
+      <div class="hero-container container">
+        <div class="hero-data" id="hero-data">
+          <span class="tagline">A hiking guide</span>
+          <h1 class="title main-title">Be prepared for the mountains and behyond !</h1>
+          <a href="#hiking-information" class="btn btn-scroll-down">
+            Scroll down <i class="ri-arrow-down-line"></i>
+          </a>
+        </div>
+      </div>
+      <img src="./assets/images/hero-top.png" alt="sky" class="parallax-img parallax-top-img" id="sky">
+      <img src="./assets/images/hero-middle.png" alt="mountains" class="parallax-img parallax-middle-img" id="mountains">
+      <img src="./assets/images/hero-bottom.png" alt="grassland" class="parallax-img parallax-bottom-img" id="grassland">
+    </section>
+
+
+  </main>
       <!-- Hero -->
 
       <!-- Hiking-information -->
