Section hiking information was added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,47 @@
       <img src="./assets/images/hero-bottom.png" alt="grassland" class="parallax-img parallax-bottom-img" id="grassland">
     </section>
 
+    <section class="hiking-information section" id="hiking-information">
+      <div class="card-container container">
 
+        <div class="card d-grid">
+          <img src="./assets/images/01.png" alt="hiking" class="card-image frame-position-center">
+          <div class="card-info">
+            <span class="count">01</span>
+            <span class="tagline">Get started</span>
+            <h2 class="title card-title">What level of hiker are you?</h2>
+            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Temporibus, sunt tempore numquam laborum nemo dolore blanditiis quo laudantium ab ratione dolores asperiores eaque doloribus necessitatibus nostrum ad saepe veniam fugiat.</p>
+            <a href="#" class="btn btn-accent">Read more <i class="ri-arrow-right-line"></i> </a>
+            </div>
+        </div>
+
+        <div class="card d-grid">
+          <img src="./assets/images/02.png" alt="hiking" class="card-image frame-position-center">
+          <div class="card-info">
+            <span class="count">02</span>
+            <span class="tagline">Get started</span>
+            <h2 class="title card-title">What level of hiker are you?</h2>
+            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Temporibus, sunt tempore numquam laborum nemo dolore blanditiis quo laudantium ab ratione dolores asperiores eaque doloribus necessitatibus nostrum ad saepe veniam fugiat.</p>
+            <a href="#" class="btn btn-accent">Read more <i class="ri-arrow-right-line"></i> </a>
+            </div>
+        </div>
+
+        <div class="card d-grid">
+          <img src="./assets/images/03.png" alt="hiking" class="card-image frame-position-center">
+          <div class="card-info">
+            <span class="count">03</span>
+            <span class="tagline">Get started</span>
+            <h2 class="title card-title">What level of hiker are you?</h2>
+            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+              Temporibus, sunt tempore numquam laborum nemo dolore blanditiis quo laudantium ab ratione dolores asperiores eaque doloribus necessitatibus nostrum ad saepe veniam fugiat.</p>
+            <a href="#" class="btn btn-accent">Read more <i class="ri-arrow-right-line"></i> </a>
+            </div>
+        </div>
+
+      </div>
+    </section>
   </main>
       <!-- Hero -->
 
