Footer was added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   </header>
   <!-- Main -->
   <main class="main">
+    <!-- Hero -->
     <section class="hero">
       <div class="hero-container container">
         <div class="hero-data" id="hero-data">
@@ -66,6 +67,7 @@
       <img src="./assets/images/hero-bottom.png" alt="grassland" class="parallax-img parallax-bottom-img" id="grassland">
     </section>
 
+    <!-- Hiking-information -->
     <section class="hiking-information section" id="hiking-information">
       <div class="card-container container">
 
@@ -104,15 +106,40 @@
             <a href="#" class="btn btn-accent">Read more <i class="ri-arrow-right-line"></i> </a>
             </div>
         </div>
-
       </div>
     </section>
   </main>
-      <!-- Hero -->
-
-      <!-- Hiking-information -->
-
   <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container container d-grid">
+      <div class="brand-information">
+        <a href="./index.html" class="logo-box">
+          <img src="./assets/images/logo.png" alt="MTN logo" class="logo-image">
+        </a>
+        <p class="footer-blurb">Get out there & discover your next slope, mountain & destination!</p>
+        <span class="copyright">&copy; 2021 MNTN, Inc. All rights reserved.</span>
+      </div>
+
+      <div class="footer-nav d-grid">
+        <div class="footer-nav-group">
+          <h6 class="footer-nav-title">More on the blog</h6>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+        </div>
+
+        <div class="footer-nav-group">
+          <h6 class="footer-nav-title">More on MNTN</h6>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+          <a href="#" class="footer-nav-link nav-link">Test item</a>
+        </div>
+
+      </div>
+    </div>
+  </footer>
   
 <!-- Import JS file   -->
 <script src="./assets/js/main.js"></script>
