Media queries were added

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <main class="main">
     <!-- Hero -->
     <section class="hero">
-      <div class="hero-container container">
+      <div class="hero-container container d-grid">
         <div class="hero-data" id="hero-data">
           <span class="tagline">A hiking guide</span>
-          <h1 class="title main-title">Be prepared for the mountains and behyond !</h1>
+          <h1 class="title main-title">Be prepared for the mountains and behyond!</h1>
           <a href="#hiking-information" class="btn btn-scroll-down">
             Scroll down <i class="ri-arrow-down-line"></i>
           </a>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="card d-grid">
-          <img src="./assets/images/02.png" alt="hiking" class="card-image frame-position-center">
+          <img src="./assets/images/02.png" alt="hiking" class="card-image order-first frame-position-center">
           <div class="card-info">
             <span class="count">02</span>
             <span class="tagline">Get started</span>
